--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ body {
 .envelope > .letter > .text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: var(--txt-color);
-    text-align: left;
+    text-align: center;
     font-size: 8px;
 }
 
